# agent-like-observers-ewfs

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/data_noiseless_simulation/: noiseless_run_2026-02-23T15-12-23_shots10000.json  noiseless_run_2026-02-23T15-32-35_shots10000.json  noiseless_run_2026-02-24T14-16-20_shots10000.json
data/ibm_marrakesh_20260408_094634/: raw_sampler_result.pkl
data/ibm_marrakesh_20260408_095533/: accuracy_test_job_info.json
ewfs/: __init__.py  accuracy_test_circuits.py  agent_evaluation.py  agents.py  betting_agent.py  depolarizing_noise.py  fake_hardware.py  find_best_5qubits.py  find_best_agent_layouts.py  guessing_agent.py  ibm_connectivity.py  ibm_torino_coupling_map.py  ibm_transpilation.py  lf_violations.py  noiseless_simulation.py  plot_ibm_connectivity.py  plot_torino_connectivity.py  plot_torino_connectivity_simple.py  real_hardware.py  reflex_agent.py  run.py  run_ibm.py  test_plot.py  time_ordering_hardware.py  transpilation_ibm.py
ewfs/agents/: agents.py  (+3 more)
ibm_marrakesh_20260408_095304/: accuracy_test_job_info.json  real_hardware_run.json
ibm_marrakesh_20260408_100516/: real_hardware_run.json
ibm_marrakesh_20260408_101756/: accuracy_test_real_hardware_run.json
ibm_wigners_friend/: wigners-friend.ipynb
notebooks/: project_demo.ipynb  project_notebook.ipynb  project_plots.ipynb
scripts/: evaluate_agents.py  evaluation.py  plot_ibm_connectivity.py  plot_time_ordering.py  run_experiment.py
simple_agent/: reflex_agent.py  simple_agent.py  simple_agent_ibm.py  simple_agent_jl.py
(+228 files in other folders)
