[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "masters-thesis-ewfs"
version = "0.1.0"
description = "Code for EWFS master's thesis experiments."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ewfs-run = "ewfs.experiments.run:main"
ewfs-evaluate = "ewfs.analysis.agent_evaluation:main"
ewfs-plot-time-ordering = "ewfs.analysis.time_ordering_hardware:main"
ewfs-plot-connectivity = "ewfs.analysis.plot_ibm_connectivity:main"
